saves/test/demo_full_20240802_193545/m2014_q6c/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp m2014_q6c_tb.v m2014_q6c.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
m2014_q6c_tb.v:116: $finish called at 130000 (1ps)

iverilog cmd 2 error:

